# OpenGL

./: CMakeLists.txt
src/: 3.3.shader.fs  glad.c  glad.h  main.cpp  shaders.h
